--- a/public/templates/manager.mustache
+++ b/public/templates/manager.mustache
@@ -1,7 +1,5 @@
 /**
- * Mananger (业务逻辑组合层)
- *
- * 当前层级负责实现复杂业务逻辑，表达复杂业务概念
+ * Manager (业务逻辑组合层) 负责实现复杂业务逻辑，表达复杂业务概念
  *
  * 本层的使用场景有：
  *
@@ -13,4 +11,4 @@
 import { Injectable } from '@nestjs/common';
 
 @Injectable()
-export class {{ upperName }}Mananger {}
+export class {{ upperName }}Manager {}
