--- a/public/templates/provider.mustache
+++ b/public/templates/provider.mustache
@@ -14,7 +14,7 @@ export class {{ upperName }}Provider {}
 //  * @example:
 //  *  inject: [{{ upperName }}Provider.provide]
 //  */
-// export class AProvider {
+// export class {{ upperName }}Provider {
 //   public static readonly provide = Symbol('{{ upperName }}Provider');
 
 //   public static getProvider() {
