fix: nest.js forward reference

--- a/public/templates/dao.mustache
+++ b/public/templates/dao.mustache
@@ -24,9 +24,7 @@ export class {{ upperName }}DAO {}
 
 // @Injectable()
 // export class {{ upperName }}DAO {
-//   constructor(
-//     private readonly entity = {{ upperName }},
-//   ) {}
+//   private readonly entity = {{ upperName }};
 
 //   /** 单条查询 */
 //   public async findOne(dto: Find{{ upperName }}DTO) {
